rust/src/nasl/syntax/snapshots/scannerlib__nasl__syntax__keyword_extension__test__unclosed.snap
---
source: src/nasl/syntax/keyword_extension.rs
expression: "crate :: nasl :: syntax :: lexer :: tests ::\nparse_err(stringify! (unclosed), \"local_var a, b, c\")"
snapshot_kind: text
---
error: Unexpected end of file.
  ┌─ unclosed:1:1
  │
1 │ local_var a, b, c
  │ ^ Unexpected end of file.
